[package]
name = "gpu_raw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
libraw-rs = "0.0.4"
libraw-rs-sys = "0.0.4"
wgpu = "0.16"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
